# skillforge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.txt  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  tests.yml
docs/: README.md  cli-cheatsheet.md  hub-guide.md  skill-authoring-guide.md  testing-guide.md
examples/: README.md
examples/skills/api-documenter/: SKILL.md  STYLE_GUIDE.md
examples/skills/code-reviewer/: SKILL.md  tests.yml
examples/skills/data-analyst/: SKILL.md
examples/skills/git-commit/: SKILL.md  tests.yml
examples/tutorials/: 01-getting-started.md  02-testing-skills.md  03-security-governance.md  04-multi-platform.md  05-mcp-integration.md
skillforge/: __init__.py  ai.py  ai_generator.py  api.py  bless.py  bundler.py  cassette.py  checks.py  claude_code.py  cli.py  composer.py  config.py  doctor.py  executor.py  generator.py  importer.py  linter.py  loader.py  lockfile.py  migrate.py  models.py  placeholders.py  recorder.py  registry.py  runner.py  sandbox.py  scaffold.py  secrets.py  skill.py  templates.py  tester.py  testing.py  validator.py  versioning.py  wrapper.py
skillforge/analytics/: __init__.py  reports.py  tracker.py
skillforge/governance/: __init__.py  audit.py  policy.py  trust.py
skillforge/hub/: __init__.py  client.py  publish.py
skillforge/mcp/: __init__.py  client.py  mapping.py  server.py
skillforge/security/: __init__.py  patterns.py  scanner.py
tests/: test_ai_analysis.py  test_ai_generator.py  test_analytics.py  test_bless.py  test_cassette.py  test_checks.py  test_claude_code.py  test_cli.py  test_composer.py  test_config.py  test_doctor.py  test_executor.py  test_generator.py  test_governance.py  test_importer.py  test_linter.py  test_loader.py  test_lockfile.py  test_mcp.py  test_migrate.py  test_models.py  test_placeholders.py  test_platforms.py  test_recorder.py  test_registry.py  test_runner.py  test_scaffold.py  test_secrets.py  test_security.py  test_templates.py  test_tester.py  test_testing.py  test_versioning.py  test_wrapper.py
