[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillforge"
version = "0.1.0"
description = "Create, test, and run deterministic Skills — reproducible, automated tasks for any codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SkillForge Contributors" }
]
maintainers = [
    { name = "SkillForge Contributors" }
]
keywords = [
    "cli",
    "automation",
    "skills",
    "testing",
    "deterministic",
    "devops",
    "workflow",
    "reproducible",
    "sandbox",
    "yaml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/lhassa8/skillforge"
Documentation = "https://github.com/lhassa8/skillforge#readme"
Repository = "https://github.com/lhassa8/skillforge.git"
Issues = "https://github.com/lhassa8/skillforge/issues"
Changelog = "https://github.com/lhassa8/skillforge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ai = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]
crypto = [
    "cryptography>=41.0.0",
]
vault = [
    "hvac>=2.0.0",
]
all = [
    "skillforge[ai,crypto,vault]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
skillforge = "skillforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["skillforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
