[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-skillforge"
version = "1.0.0"
description = "Create, validate, and bundle Anthropic Agent Skills — custom instructions that extend Claude's capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SkillForge Contributors" }
]
maintainers = [
    { name = "SkillForge Contributors" }
]
keywords = [
    "anthropic",
    "claude",
    "agent-skills",
    "cli",
    "ai",
    "llm",
    "skills",
    "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/lhassa8/skillforge"
Documentation = "https://github.com/lhassa8/skillforge#readme"
Repository = "https://github.com/lhassa8/skillforge.git"
Issues = "https://github.com/lhassa8/skillforge/issues"
Changelog = "https://github.com/lhassa8/skillforge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ai = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
skillforge = "skillforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["skillforge"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    "api_key.txt",
    "skills/",
    "*.zip",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Gradually enable stricter checking
warn_return_any = false
warn_unused_ignores = false
# Allow some common patterns
allow_redefinition = true
# Disable strict optional for now (many false positives)
strict_optional = false
# Disable errors for missing annotations (legacy code)
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Ignore specific error codes causing issues
disable_error_code = ["var-annotated", "arg-type", "return-value", "assignment", "union-attr", "dict-item", "attr-defined"]
